# openclaw-skills

./: .skills_store_lock.json  README.md  md-viewer-progress.py  restart-admin.sh
clw-gold-monitor/: SKILL.md
clw-md-to-pdf/: SKILL.md
clw-md-to-pdf/scripts/: md_to_pdf.py
ideas2tasks/: SKILL.md  pyproject.toml
ideas2tasks/docs/: STATUS_SYNC_FIX.md  VERIFICATION-2026-04-12.md
ideas2tasks/ideas2tasks/: __init__.py  __main__.py  executor.py  lifecycle.py  scan.py  state_sync.py  task_audit.py  task_completion_hook.py  task_status.py
ideas2tasks/scripts/: executor.py  executor_compat.py  lifecycle.py  lifecycle_status.json  migrate_readme.py  read_task_status_compat.py  sync_status_compat.py  task_audit_compat.py  task_completion_hook.py  task_status.py
openclaw-backup/.clawhub/: origin.json
self-improving/.clawhub/: origin.json
sinotrade-scraper/: SKILL.md  pyproject.toml
sinotrade-scraper/scripts/: sinotrade_scraper.py
sinotrade-scraper/sinotrade_scraper/: __init__.py  __main__.py  scraper.py  telegram.py
skills/: .gitignore  SECURITY.md  md-viewer-progress.py
skills/agent-browser-clawdbot/: SKILL.md
skills/clw-gold-monitor-pro/: SKILL.md
skills/github/: SKILL.md
skills/gold-monitor/: SKILL.md  config.example.json  gold_monitor.py
skills/ideas2tasks/: SKILL.md
skills/openai-whisper/: SKILL.md
skills/openclaw-backup/: SKILL.md
skills/prompt-injection-filter/: SKILL.md  filter.py
skills/self-improving/: SKILL.md
skills/self-improving-agent/: SKILL.md
skills/summarize/: SKILL.md
skills/voice-reply/: SKILL.md
(+31 files in other folders)
