[project]
name = "ideas2tasks"
version = "2.2.0"
description = "將 Ideas 目錄的想法轉為敏捷任務"
authors = [{ name = "openclawchen8-lgtm" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # 純標準庫，無第三方依賴

[project.scripts]
ideas2tasks = "ideas2tasks.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ideas2tasks"]

[tool.uv]
dev-dependencies = []
